# RubiksCubeSolver

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: NibbleArray.cpp  NibbleArray.h  PatternDatabase.h
Solver/: BFSSolver.h  DFSSolver.h  IDDFSSolver.h
